update app base

--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,17 +1,44 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Contact
+      Contato <ion-icon name="people" item-left></ion-icon>
+
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <ion-list-header>Follow us on Twitter</ion-list-header>
-    <ion-item>
-      <ion-icon name="ionic" item-start></ion-icon>
-      @ionicframework
-    </ion-item>
-  </ion-list>
+  <ion-card>
+    <img src="assets/imgs/eduardo.jpg"/>
+    <ion-card-content>
+      <ion-card-title>
+         Luís Eduardo
+        </ion-card-title>
+      <p style="text-align:justify;">
+          Computer Science student at Federal University of Alagoas and Computer Technician by the Federal Institute of Education, Science and Technology of Alagoas.         
+      </p>
+      
+      <hr>
+      
+      <ion-list>
+        <button ion-item>
+          <ion-icon name="logo-github" item-start ></ion-icon>
+          luiseduardogfranca
+        </button>
+        <button ion-item>
+          <ion-icon name="logo-instagram" item-start></ion-icon>
+          luiseduardogfranca
+        </button>
+        <button ion-item>
+          <ion-icon name="logo-facebook" item-start></ion-icon>
+          luiseduardo_gf
+        </button>
+        <button ion-item>
+          <ion-icon name="logo-whatsapp" item-start></ion-icon>
+          (82) 9 9999-2222
+        </button>
+      </ion-list>
+
+    </ion-card-content>
+  </ion-card>
 </ion-content>
