--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,42 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title>QuizzQuímica</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+  <ion-card>
+
+    <ion-item>
+      <ion-avatar item-start>
+        <img src="assets/imgs/eduardo.jpg">
+      </ion-avatar>
+      <h2>Luís Eduardo</h2>
+      <p><ion-icon name="ios-school" item-left></ion-icon> Computer Science </p>
+    </ion-item>
+  
+    <img src="assets/imgs/code.jpg">
+  
+    <ion-card-content>
+      <p style="text-align:justify;">Olá, vamos aprender um pouco sobre Estequiometria? Embarque nesse quizz para testar seu conhecimento!</p>
+      <hr>
+      <p style="font-size:9pt; color: rgba(0,0,0,0.5)" >"Estequiometria é a forma de calcular quantidades de reagentes e produtos em uma reação química"</p>
+    </ion-card-content>
+  
+    <ion-row>
+      <ion-col>
+        <button (click)="showPrompt()" ion-button icon-left clear small>
+          <ion-icon name="game-controller-a"></ion-icon>
+          <div>Começar</div>
+        </button>
+      </ion-col>
+      <ion-col>
+        <button (click)="likeQuizz(1)" ion-button icon-left clear small>
+          <ion-icon name="thumbs-up"></ion-icon>
+          <div>Gostei <ion-badge item-end>{{like}}</ion-badge></div>
+        </button>
+      </ion-col>
+    </ion-row>
+  
+  </ion-card>
 </ion-content>
